Added search functionality in home page

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 /Pharmacy/Pharmacy/target/
 /ProjectFiles/PharmacyManagement/nbproject/private/
 /ProjectFiles/PharmacyManagement/build/
+.idea/vcs.xml
+.idea/PharmacyManagement.iml
+.idea/modules.xml
+.idea/misc.xml
+.idea/inspectionProfiles/profiles_settings.xml
