--- a/ProjectFiles/PharmacyManagement/nbproject/project.properties
+++ b/ProjectFiles/PharmacyManagement/nbproject/project.properties
@@ -33,7 +33,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.JAVADB_DRIVER_LABEL.classpath}:\
     ${file.reference.mysql-connector-java-5.1.48-bin.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
